#
# some news ... see also TODO for hints
#


2017-10-18 -> some first step towards simple_tennis

2017-10-17 -> add pixel-objects for simple_tennis example
	      first implementation of the simple_tennis example

2017-10-16 -> some fixes around the joystick fab
	   -> add skeleton for a fist simple game -> simple_tennis (something
	      like pong clone)
	   -> add skeleton for simple ai demo

2017-10-15 -> finalize joystick fab
	   -> add some functions/macros around the joystick fab

2017-10-14 -> add some minor steps towards joystick fab

2017-10-11 -> add next steps towards joystick fab
	   -> fix missing free of joystick array

2017-10-10 -> add first steps for something like joystick fab (similiar to object fab)

2017-10-09 -> add skeleton for object_fab_xml.c which should provide the same parts
	      via libxml (and xml based config-file) like object_fab.c (uses libconfig)

2017-10-08 -> do some renaming for more consistense function names
	   -> do some cleanups and locate all functions using libconfig to object_fab

2017-10-05 -> add some new artwork
	   -> add first multiple joystick handling to object_fab example
	   -> add skelton for joystick configuration via config file

2017-10-04 -> add some new artwork
	   -> let object-fab demo use the new artwork

2017-10-03 -> some minor updates/adds regarding textures and co
	   -> add next steps to a complete data driven object generation
	   -> finalize objcet_fab example

2017-09-29 -> some fix texture handling in dynamic_config example
	   -> add first steps to a complete data driven object generation

2017-09-28 -> add skeleton of object_fab example

2017-09-27 -> some fixes for player handling in dynamic_config example
	   -> mv config stuff to helper

2017-09-24 -> add game_obj_func_t which holds all functions
	   -> make flying_astronaut_2 and collision use it
	   -> add first stuff for the config handling (data driven design)