@@ -54,8 +54,7 @@ vector2d_t velo = {.x = 0, .y = 0};
 SDL_Joystick *joystick_array[MAX_NUM_JOYSTICKS + 1];
 
 /* size of window */
-const int SCREEN_WIDTH = 1280;
-const int SCREEN_HEIGHT = 720;
+spread_t screen = { .w = 1280, .h =720 };
 
 /*
  * do all init stuff
@@ -63,7 +62,7 @@ const int SCREEN_HEIGHT = 720;
 void
 init_game(void)
 {
-	window = setup_main_window(PROGNAME, SCREEN_WIDTH, SCREEN_HEIGHT, 0);
+	window = setup_main_window(PROGNAME, &screen, 0);
 	if (window == NULL)
 		exit(EXIT_FAILURE);
 
@@ -136,11 +135,11 @@ update_all(void)
 	set_object_velo(player, &velo);
 
 	int x = get_object_pos_x(player);
-	if (x > (SCREEN_WIDTH - get_object_size_w(player)) || x < 0)
+	if (x > (screen.w - get_object_size_w(player)) || x < 0)
 		inv_vec_x(&velo);
 
 	int y = get_object_pos_y(player);
-	if (y > (SCREEN_HEIGHT - get_object_size_h(player)) || y < 0)
+	if (y > (screen.h - get_object_size_h(player)) || y < 0)
 		inv_vec_y(&velo);
 
 	if (enable_debug)
